# aio-odoorpc

./: .gitignore  LICENSE  README.md  dev-requirements.txt  gen_sync_code  gen_sync_code.py  pyproject.toml  requirements.txt
aio_odoorpc/: __init__.py  aio_odoorpc.py  async_jsonrpc.py  async_odoorpc.py  helper.py  helpers.py  jsonrpc.py  odoorpc.py  protocols.py
tests/: conftest.py  test_aio_odoorpc.py  test_async.py  test_sync.py
