[tool.poetry]
name = "aio-odoorpc"
description = "Fast, simple Odoo RPC package with both a synchronous and an asynchronous client"
version = "0.4.0"
license = "CC0-1.0"
authors = ["mbello <mbello@users.noreply.github.com>"]
repository = "https://github.com/mbello/odoorpc-utils"
homepage = "https://github.com/mbello/odoorpc-utils"
keywords = ['odoo', 'odoorpc', 'asyncio', 'Odoo RPC API', 'Odoo jsonrpc', 'Odoo asyncio', 'Odoo async', 'Odoo asynchronous']


[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
