[tool.poetry]
name = "aio-odoorpc"
description = "Fast, simple Odoo RPC client with both a synchronous and an asynchronous client"
version = "1.3.12"
license = "CC0-1.0"
authors = ["mbello <mbello@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/mbello/aio-odoorpc"
homepage = "https://github.com/mbello/aio-odoorpc"
keywords = ['odoorpc', 'asyncio', 'jsonrpc', 'odoo', 'ERPpeek']


[tool.poetry.dependencies]
python = "^3.8"
aio-odoorpc-base = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
beautifulsoup4 = "^4.8.2"
requests = "^2.22.0"
httpx = "^0.11.1"
aiohttp = "^3.6.2"
pytest-benchmark = "^3.2.3"
pytest-asyncio = "^0.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
